--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-native-view-shot": "^3.5.0",
     "react-native-webview": "^11.15.0",
     "react-native-youtube-iframe": "^2.2.2",
+    "react-native-zavalabs-scanner": "^1.0.1",
     "rn-fetch-blob": "^0.12.0",
     "text-encoding": "^0.7.0",
     "xlsx": "^0.18.5"
